--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
            <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active"><a class="nav-link" id="tst" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" id="tst" href="content.html">Habit Formation</a></li>
-                    <li class="nav-item"><a class="nav-link" id="tst" href="habitform.html">Content</a></li>
+                    <li class="nav-item"><a class="nav-link" id="tst" href="Habit_Formation.html">Habit Formation</a></li>
+                    <li class="nav-item"><a class="nav-link" id="tst" href="content.html">Content</a></li>
                     <li class="nav-item"><a class="nav-link" id="tst" href="aboutus.html">About Us</a></li>
 
                 </ul>  
@@ -39,29 +39,52 @@
     </header>
 
     <div class="container">
-        <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-6">
-                <h1 id="heads1">How 2 In 90 Days</h1>
-                <p>Each of us has a dream, a passion, an awesome life awaiting us and within a short amount of
-                    time dreams can be realized. Take this NuCamp course as an example, 30 days ago most of us could barely get
-                    through a simple CSS and HTML form. In another 60+ days, we’ll be well on our way to living our dreams.</p>
-                <h4 id="heads1">Why 90 Days?</h4>
-                <p>It’s a season/quarter in a year and it’s long enough for whatever change we’ve implemented to be a
-                    solid repeatable habit. There are various studies that indicate that in order for an activity/action to be a habit that
-                    we need to repeat the habit for a minimum of five times and as many as 28 times depending on all of the
-                    surrounding factors. Within 90 days, the new habit will be in place and the transformative results will start showing.</p>
-                <h4 id="heads1">Body building quote:</h4>
-                <div class="card card-body bg-light">
-                    <blockquote class="blockquote">
-                            <p class="mb-0">In two weeks (15 days), you’ll FEEL it.
-                                    In four weeks (30 days), you’ll SEE it.
-                                    In twelve weeks (90 days,) you’ll HEAR it. That’s when the “magic happens” You start receiving positive
-                                    reinforcement from those around you making it that much easier to continue the positive habit that leads to life</p>
-                            <footer class="blockquote-footer">Sean Coleman,
-                                <cite title="Source Title">The Wit and Wisdom of Sean Coleman,
-                            2019</cite>
-                        </footer>
-                    </blockquote>
+        <div class="row row-content">
+            <div class="col-12 col-sm-12">
+                <div class="media">
+                    <div class="media-body">
+                        <h1 id="heads1">How 2 In 90 Days</h1>
+                        <p>Each of us has a dream, a passion, an awesome life awaiting us and within a short amount of
+                            time dreams can be realized. Take this NuCamp course as an example, 30 days ago most of us could barely get
+                            through a simple CSS and HTML form. In another 60+ days, we’ll be well on our way to living our dreams.</p>
+                    </div>
+                    <img class="d-flex col-3" id="imossiblepic" src="impossible.jpg" alt="impossible">
+                </div>
+            </div>
+        </div>
+                
+        <div class="row row-content">
+            <div class="col-12 col-sm-12">
+                <div class="media">
+                    <div class="media-body">
+                        <h1 id="heads1">Why 90 Days?</h1>
+                        <p>It’s a season/quarter in a year and it’s long enough for whatever change we’ve implemented to be a
+                            solid repeatable habit. There are various studies that indicate that in order for an activity/action to be a habit that
+                            we need to repeat the habit for a minimum of five times and as many as 28 times depending on all of the
+                            surrounding factors. Within 90 days, the new habit will be in place and the transformative results will start showing.</p>
+                    </div>
+                    <img class="d-flex col-3" id="imossiblepic" src="motivational.jpg" alt="motivational picture">
+                </div>
+            </div>
+        </div>
+        <div class="row row-content">
+            <div class="col-12 col-sm-12">
+                    <div class="media">
+                        <!-- <h1 id="heads1">Body building quote:</h1> -->
+                        <div class="card card-body bg-light">
+                            <blockquote class="blockquote">
+                                <p class="mb-0">In two weeks (15 days), you’ll FEEL it.
+                                        In four weeks (30 days), you’ll SEE it.
+                                        In twelve weeks (90 days,) you’ll HEAR it. That’s when the “magic happens” You start receiving positive
+                                        reinforcement from those around you making it that much easier to continue the positive habit that leads to life</p>
+                                <footer class="blockquote-footer">Sean Coleman,
+                                    <cite title="Source Title">The Wit and Wisdom of Sean Coleman,
+                                    2019</cite>
+                                </footer>
+                            </blockquote>
+                        </div>
+                        <img class="d-flex col-3" id="imossiblepic" src="bodybuildingquote.jpg" alt="inspirational picture">
+                    </div>
                 </div>
             </div>
         </div>  
@@ -97,8 +120,8 @@
                         <h5>Links</h5>
                         <ul class="list-unstyled">
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="#">Habit Formation</a></li>
-                            <li><a href="#">Content</a></li>
+                            <li><a href="Habit_Formation.html">Habit Formation</a></li>
+                            <li><a href="content.html">Content</a></li>
                             <li><a href="aboutus.html">About Us</a></li>
                         </ul>
                     </div>
