--- a/Content.html
+++ b/Content.html
@@ -27,9 +27,49 @@
                         <li class="nav-item"><a class="nav-link" id="tst" href="aboutus.html">About Us</a></li>
     
                     </ul>  
-                </div>          
+                </div>
+                <span class="navbar-text">
+                    <a data-toggle="modal" data-target="#loginModal">
+                    <span class="fa fa-sign-in"></span> Login</a>
+                </span>           
             </div>
         </nav>
+        <div id="loginModal" class="modal fade" role="dialog">
+            <div class="modal-dialog modal-lg">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title">Login </h4>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="form-row">
+                                <div class="form-group col-sm-4">
+                                        <label class="sr-only" for="exampleInputEmail3">Email address</label>
+                                        <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3" placeholder="Email">
+                                </div>
+                                <div class="form-group col-sm-4">
+                                    <label class="sr-only" for="exampleInputPassword3">Password</label>
+                                    <input type="password" class="form-control form-control-sm mr-1" id="exampleInputPassword3" placeholder="Password">
+                                </div>
+                                <div class="col-sm-auto">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox">
+                                        <label class="form-check-label"> Remember me
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>        
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
         <header class="jumbotron" >
             <div class="container">
                 <div class="row row-header">
@@ -38,6 +78,16 @@
         </header>
     
         <div class="container">
+            <div class="row">
+                <ol class="col-12 breadcrumb">
+                    <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+                    <li class="breadcrumb-item active">Content</li>
+                    </ol>
+                <!-- <div class="col-12">
+                    <h3>Content</h3>
+                    <hr>
+                </div> -->
+            </div>
             <div class="row row-content align-items-center">
                 <div class="col-12 col-sm-6">
                     <h1 id="heads1">Why start a new habit?</h1>
@@ -96,8 +146,8 @@
                             <h5>Links</h5>
                             <ul class="list-unstyled">
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="#">Habit Formation</a></li>
-                                <li><a href="#">Content</a></li>
+                                <li><a href="Habit_Formation.html">Habit Formation</a></li>
+                                <li><a href="Content.html">Content</a></li>
                                 <li><a href="aboutus.html">About Us</a></li>
                             </ul>
                         </div>
