--- a/aboutus.html
+++ b/aboutus.html
@@ -23,14 +23,54 @@
            <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active"><a class="nav-link" id="tst" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" id="tst" href="">Habit Formation</a></li>
-                    <li class="nav-item"><a class="nav-link" id="tst" href="#">Content</a></li>
-                    <li class="nav-item"><a class="nav-link" id="tst" href="#">About Us</a></li>
+                    <li class="nav-item"><a class="nav-link" id="tst" href="Habit_Formation.html">Habit Formation</a></li>
+                    <li class="nav-item"><a class="nav-link" id="tst" href="Content.html">Content</a></li>
+                    <li class="nav-item"><a class="nav-link" id="tst" href="aboutus.html">About Us</a></li>
 
                 </ul>  
-            </div>          
+            </div>
+            <span class="navbar-text">
+                <a data-toggle="modal" data-target="#loginModal">
+                <span class="fa fa-sign-in"></span> Login</a>
+            </span>           
         </div>
     </nav>
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Login </h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-row">
+                            <div class="form-group col-sm-4">
+                                    <label class="sr-only" for="exampleInputEmail3">Email address</label>
+                                    <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3" placeholder="Email">
+                            </div>
+                            <div class="form-group col-sm-4">
+                                <label class="sr-only" for="exampleInputPassword3">Password</label>
+                                <input type="password" class="form-control form-control-sm mr-1" id="exampleInputPassword3" placeholder="Password">
+                            </div>
+                            <div class="col-sm-auto">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox">
+                                    <label class="form-check-label"> Remember me
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>        
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
     <header class="jumbotron" >
         <div class="container">
             <div class="row row-header">
@@ -49,10 +89,10 @@
                     <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
                     <li class="breadcrumb-item active">About Us</li>
                 </ol>
-            <div class="col-12">
+            <!-- <div class="col-12">
                <h3>About Us</h3>
                <hr>
-            </div>
+            </div> -->
         </div>
 
         <div class="row row-content">
@@ -88,8 +128,8 @@
                     <h5>Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="#">Habit Formation</a></li>
-                        <li><a href="#">Content</a></li>
+                        <li><a href="Habit_Formation.html">Habit Formation</a></li>
+                        <li><a href="Content.html">Content</a></li>
                         <li><a href="aboutus.html">About Us</a></li>
                     </ul>
                 </div>
