--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/bootstrap-social.css">
-    <title>How2In90Days</title>
+    <title>How 2 In 90 Days</title>
 </head>
 
 <body>
@@ -28,9 +28,50 @@
                     <li class="nav-item"><a class="nav-link" id="tst" href="aboutus.html">About Us</a></li>
 
                 </ul>  
-            </div>          
+            </div>  
+            <span class="navbar-text">
+                <a data-toggle="modal" data-target="#loginModal">
+                <span class="fa fa-sign-in"></span> Login</a>
+            </span>        
         </div>
     </nav>
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Login </h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-row">
+                            <div class="form-group col-sm-4">
+                                    <label class="sr-only" for="exampleInputEmail3">Email address</label>
+                                    <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3" placeholder="Email">
+                            </div>
+                            <div class="form-group col-sm-4">
+                                <label class="sr-only" for="exampleInputPassword3">Password</label>
+                                <input type="password" class="form-control form-control-sm mr-1" id="exampleInputPassword3" placeholder="Password">
+                            </div>
+                            <div class="col-sm-auto">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox">
+                                    <label class="form-check-label"> Remember me
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>        
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <header class="jumbotron" >
         <div class="container">
             <div class="row row-header">
@@ -48,7 +89,7 @@
                             time dreams can be realized. Take this NuCamp course as an example, 30 days ago most of us could barely get
                             through a simple CSS and HTML form. In another 60+ days, we’ll be well on our way to living our dreams.</p>
                     </div>
-                    <img class="d-flex col-3" id="imossiblepic" src="impossible.jpg" alt="impossible">
+                    <img class="d-flex col-3" id="imossiblepic" src="img/impossible.jpg" alt="impossible">
                 </div>
             </div>
         </div>
@@ -63,17 +104,17 @@
                             we need to repeat the habit for a minimum of five times and as many as 28 times depending on all of the
                             surrounding factors. Within 90 days, the new habit will be in place and the transformative results will start showing.</p>
                     </div>
-                    <img class="d-flex col-3" id="imossiblepic" src="motivational.jpg" alt="motivational picture">
+                    <img class="d-flex col-3" id="motivationalpic" src="img/motivational.jpg" alt="motivational picture">
                 </div>
             </div>
         </div>
         <div class="row row-content">
             <div class="col-12 col-sm-12">
-                    <div class="media">
-                        <!-- <h1 id="heads1">Body building quote:</h1> -->
+                <div class="media">
+                    <div class="media-body">
                         <div class="card card-body bg-light">
                             <blockquote class="blockquote">
-                                <p class="mb-0">In two weeks (15 days), you’ll FEEL it.
+                                <p class="mb-3">In two weeks (15 days), you’ll FEEL it.
                                         In four weeks (30 days), you’ll SEE it.
                                         In twelve weeks (90 days,) you’ll HEAR it. That’s when the “magic happens” You start receiving positive
                                         reinforcement from those around you making it that much easier to continue the positive habit that leads to life</p>
@@ -83,13 +124,14 @@
                                 </footer>
                             </blockquote>
                         </div>
-                        <img class="d-flex col-3" id="imossiblepic" src="bodybuildingquote.jpg" alt="inspirational picture">
                     </div>
+                        <img class="d-flex col-3 mr-0" id="bodybuildingpic" src="img/bodybuildingquote.jpg" alt="inspirational picture">
+
                 </div>
             </div>
-        </div>  
-    </div>
-
+        </div>
+    </div>  
+</div>
 
         <!-- <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 col-md-3">
