--- a/aboutus.html
+++ b/aboutus.html
@@ -6,10 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
 
+        <!-- build:css css/main.css -->
         <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
-        <link rel="stylesheet" href="css/bootstrap-social.css">
+        <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
+        <link href="css/styles.css" rel="stylesheet">
+        <!-- endbuild -->
     <title>How2In90Days</title>
 </head>
 
@@ -23,7 +25,7 @@
            <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active"><a class="nav-link" id="tst" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" id="tst" href="Habit_Formation.html">Habit Formation</a></li>
+                    <li class="nav-item"><a class="nav-link" id="tst" href="habit.html">Habit Formation</a></li>
                     <li class="nav-item"><a class="nav-link" id="tst" href="Content.html">Content</a></li>
                     <li class="nav-item"><a class="nav-link" id="tst" href="aboutus.html">About Us</a></li>
 
@@ -128,7 +130,7 @@
                     <h5>Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="Habit_Formation.html">Habit Formation</a></li>
+                        <li><a href="habit.html">Habit Formation</a></li>
                         <li><a href="Content.html">Content</a></li>
                         <li><a href="aboutus.html">About Us</a></li>
                     </ul>
@@ -161,9 +163,12 @@
            </div>
         </div>
     </footer>
-    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
-    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<!-- build:js js/main.js -->
+<script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+<script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="js/scripts.js"></script>
+ <!-- endbuild-->
 </body>
 
 </html>
